--- a/journal/202001.md
+++ b/journal/202001.md
@@ -80,6 +80,8 @@ In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhN
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+{check if permabull and ammarooni posted their final pieces - if so, it means they finished delivering and is worth noting here}
+
 ## Network
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -97,10 +99,6 @@ Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. Th
 Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
 
 {any interesting analysis or events in the network}
-
-## Mining
-
-{new miners, relevant news about existing miners, interesting events or stats}
 
 ## Integrations
 
@@ -152,11 +150,16 @@ Upcoming:
   - https://twitter.com/DecredDragon/status/1215309738293985280
   - https://medium.com/@decreddrive/welcome-to-the-decred-drive-b90c57b48bbb
 
+featured in https://www.reddit.com/r/decred/comments/en76q6/decred_featured_in_ournetwork_issue_2/ 
+
 {ratings news}
 
 Selected articles:
 
+{ idea: how about we put 1-paragraph recaps of research by permabull and ammarooni in a separate Research section? }
+
 - https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd
+- https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -197,6 +200,10 @@ In January DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average da
 ## Relevant External
 
 {PoW, ASIC resistance, full nodes, cc network security and other cc tech}
+
+December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahash per second). 70% of the ~40 Eh/s added is speculated to come from China, while China's share in the total hashrate is estimated 65%. The estimated "breakeven" and "miner capitulation" prices are estimated ~$6,100 and ~$3,900 respectively. Check the  [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
+
+State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/state-of-the-network-2019-year-in) by Coin Metrics compared the performance of the largest 18 cryptoassets (including DCR) across a set of market and chain metrics.
 
 {governance, funding, chain forks, community forks, controversy}
 
