--- a/journal/202001.md
+++ b/journal/202001.md
@@ -20,6 +20,8 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
+- https://github.com/decred/dcrstakepool/issues/574 (_missed in Dec_)
+
 [dcrpool](https://github.com/decred/dcrpool): {}
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
@@ -36,7 +38,9 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 [tinydecred](https://github.com/decred/tinydecred): {}
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs):
+
+- reading list https://twitter.com/decredproject/status/1217509346667585536 {based on Ditto's edu repo?}
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
@@ -146,9 +150,12 @@ Upcoming:
 
 {community efforts: Decred Assembly, websites, etc}
 
+- @CryptopiaFilm {need more details!} https://twitter.com/DecredAustralia/status/1217282949625761792
+
 - Decred Drive - Weekly Decred News initiative from DecredDragon
   - https://twitter.com/DecredDragon/status/1215309738293985280
   - https://medium.com/@decreddrive/welcome-to-the-decred-drive-b90c57b48bbb
+  - https://medium.com/@decreddrive/the-decred-drive-jan-16-9bb063e1f4df
 
 featured in https://www.reddit.com/r/decred/comments/en76q6/decred_featured_in_ournetwork_issue_2/ 
 
@@ -174,6 +181,8 @@ Audio:
 
 - https://fiftyonepercent.podbean.com/e/decred/
 
+angfab https://www.reddit.com/r/decred/comments/end3lc/d_e_c_r_e_d/
+
 ## Community Discussions
 
 Comm systems news:
@@ -197,6 +206,8 @@ In January DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average da
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
+{briefly cover altcoin action, https://cointelegraph.com/news/dash-price-up-70-bsv-gains-200-is-a-price-correction-imminent or better}
+
 ## Relevant External
 
 {PoW, ASIC resistance, full nodes, cc network security and other cc tech}
@@ -214,6 +225,8 @@ State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/st
 {Proof of Keys on Jan 3: how did it go? any withdrawal problems? tell that while Jan 3 is behind, it's never too late to check your service that you still can withdraw, that they won't block your withdrawal for lame reasons and that the support is responsive}
 
 {other: regulations, security, fun}
+
+PlusToken scam {recap of what happend + note poor privacy hygiene} https://cryptobriefing.com/bitcoin-analysis-reveals-plustoken-scam/
 
 ## About This Issue
 
