--- a/journal/202001.md
+++ b/journal/202001.md
@@ -230,6 +230,8 @@ State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/st
 
 {governance, funding, chain forks, community forks, controversy}
 
+DigixDAO https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury
+
 {DEX}
 
 {relevant exchanges and websites}
@@ -239,6 +241,8 @@ State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/st
 {other: regulations, security, fun}
 
 PlusToken scam {recap of what happend + note poor privacy hygiene} https://cryptobriefing.com/bitcoin-analysis-reveals-plustoken-scam/
+
+The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community.". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus on improving self-custodial crypto software.
 
 ## About This Issue
 
