add rel ext links

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -102,6 +102,8 @@ In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhN
 
 https://www.blockcommons.red/politeia-digest/issue026/
 
+https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet - gov numbers
+
 ## Network
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
@@ -198,7 +200,8 @@ Selected articles:
 - https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd
 - https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059
 - https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet
-
+- https://sci.smithandcrown.com/research/2019-governance-review
+- 
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -255,9 +258,33 @@ December's mining report from CoinShares notes a 80% Bitcoin hashrate increase s
 
 State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/state-of-the-network-2019-year-in) by Coin Metrics compared the performance of the largest 18 cryptoassets (including DCR) across a set of market and chain metrics.
 
+https://medium.com/plasma-group/on-to-new-beginnings-e9d76b170752
+
+Plasma is over
+
 {governance, funding, chain forks, community forks, controversy}
 
 DigixDAO https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury
+
+https://twitter.com/BinanceAmerica/status/1222522185195184129
+
+https://www.monerooutreach.org/stories/RPC-Pay.html
+
+https://medium.com/trustory-app/why-trustory-is-shutting-down-6d50175628eb
+
+https://forum.zcashcommunity.com/t/community-sentiment-polling-results-nu4-and-draft-zip-1014/35560/375
+https://twitter.com/zooko/status/1219346780640436224
+
+https://vitalik.ca/general/2020/01/28/round4.html
+
+https://medium.com/@jiangzhuoer/infrastructure-funding-plan-for-bitcoin-cash-131fdcd2412e
+
+https://www.reddit.com/r/dashpay/comments/esaf38/lets_talk_about_dash_force_news/
+
+https://agora.decentraland.org/polls/0387cebc-31a3-4e12-a7b4-e9926dd5b392
+Agora votes
+
+https://www.coindesk.com/your-pgp-key-make-sure-its-up-to-date - bitcoin hashing power used to break SHA-1
 
 {DEX}
 
@@ -270,6 +297,24 @@ DigixDAO https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury
 PlusToken scam {recap of what happend + note poor privacy hygiene} https://cryptobriefing.com/bitcoin-analysis-reveals-plustoken-scam/
 
 The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community.". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus on improving self-custodial crypto software.
+
+https://dashnews.org/long-awaited-dash-evolution-platform-released-on-testnet-with-developer-documentation-hub/
+
+
+
+Nakamoto journal launch
+
+https://modernconsensus.com/cryptocurrencies/bitcoin/bitcoin-journal-nakamotos-rocky-start/
+
+https://cryptoslate.com/nakamowho-blog-by-pro-bitcoin-technologists-bashed-by-btc-maximalists/
+
+https://nakamoto.com/about/
+
+
+
+https://cointelegraph.com/news/europe-central-bank-proposes-unattractive-rates-for-digital-currency
+
+
 
 ## About This Issue
 
