add people numbers

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -82,13 +82,13 @@ Community stats:
 - Twitter followers: 40,860 (+)
 - Reddit subscribers:  9,723 ()
 - Matrix users: 533 (+{})
-- Slack users: {} (+{})
+- Slack users: 6,880 (+{})
 - Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{})
-- Facebook followers: {} (+{}), likes: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Telegram users: 2,728 (+{})
+- YouTube subscribers: 3,950 (+{})
+- Facebook followers: 3,563 (+{}), likes: 3,234 (+{})
+- LinkedIn followers: 689 (+{})
+- GitHub dcrd stars: 533 (+{}), forks: 1,500 (+{})
 
 ## Governance
 
