--- a/journal/202001.md
+++ b/journal/202001.md
@@ -60,7 +60,7 @@ Other:
 
 - {smaller items go here}
 
-Dev activity stats for January: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+Dev activity stats for January: 187 active PRs, 128 master commits, 19K added and 10K deleted lines spread across 15 repositories. Contributions came from 3-6 developers per repository.
 
 ## People
 
