--- a/journal/202001.md
+++ b/journal/202001.md
@@ -64,7 +64,7 @@ Dev activity stats for January: 187 active PRs, 128 master commits, 19K added an
 
 ## People
 
-Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: username ([repo](link to user's commits))}
+Welcome to new first time contributors with code merged to master: Ole Andre Birkedal ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=termoose)), Tsunekazu ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=Tsunekazu)), Pablito Labarta ([dcrweb](https://github.com/decred/dcrweb/commits?author=pLabarta))
 
 Congratulations to {n} contributors listed on [decred.org](https://decred.org/contributors/):
 
