--- a/journal/202001.md
+++ b/journal/202001.md
@@ -149,7 +149,9 @@ Data from a node that was running since block 0 [shows]() that Decred mainnet ch
 
 Exchange integrations:
 
-- report on Twitter that Bittrex DCR wallet was on maintenance {can anyone confirm?} https://twitter.com/Cjfan23/status/1218727480854446081
+- report on Twitter that Bittrex DCR wallet was on maintenance {can anyone confirm?}
+  - https://twitter.com/Cjfan23/status/1218727480854446081
+  - https://www.reddit.com/r/decred/comments/ew1vyc/binance_dcr_withdrawls_disabled/
 
 {OTC desks}
 
