--- a/journal/202001.md
+++ b/journal/202001.md
@@ -181,11 +181,20 @@ New merchants:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+- Jan 7 - [Digital Money Forum](https://thedigitalmoneyforum.com/) - Las Vegas, USA. @akinsawyerr argued for decentralized networks and individual sovereignty on [The Libra Effect](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) panel, which was featured on [CoinDesk](https://www.coindesk.com/libra-association-exec-world-needs-us-because-bitcoin-is-not-a-means-of-payment), and also talked to several journalists. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157859800075195pLJde:decred.org), [photos](https://twitter.com/AkinSawyerr/status/1214614201517232128))
+- Jan 14 - [Cryptopia Documentary Premiere](https://www.meetup.com/en-AU/BC-Aus/events/267242503/) - Melbourne, Australia. Decred was invited to be an event sponsor and launch partner of Cryptopia Film, a documentary about the key themes within cryptocurrency, which include regulation, privacy, financial services, governance, marketing and development. The entire theatre was booked out with over 140 guests from the crypto and blockchain community. @eSizeDave and @zohand talked Decred on a panel discussion and were quoted in the official [press release](https://prwire.com.au/r/87706). {link report when merged}.
+- Jan 14 - [GoCracow #7](https://www.meetup.com/en-AU/GoCracow/events/265765051/) - Kraków, Poland. {how did it go?} ([photos](https://twitter.com/Decred_PL/status/1219598013896646658))
+- Jan 24 - {title?} - Casablanca, Morocco. @arij was invited to talk at the event co-organized by the Moroccan Youth Ministry with the topic "The role of new technologies in promoting the positive development of young people". @arij talked about blockchains and introduced Politeia and LN to the audience of around 50 people of different backgrounds, mostly young people. ([photos](https://twitter.com/DecredArabia/status/1220819101586685952))
+- Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - Internet. {@lukebp how did it go?}
 
 Upcoming:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- Feb 6-8 - Decred 4th Anniversary. {populate if release before 8th}
+- Feb ~8 - Decred 4th Anniversary - Brazil. 5 cities confirmed for the anniversary celebration of the genesis block: Sao Paulo, Belo Horizonte, Rio de Janeiro, Natal and Juiz de Fora. {drop if releasing after this}
+- Mar 12-13 - [Blockchain Summit Latam](https://www.blockchainsummit.la) - Panama City, Panama. Decred will be a silver sponsor.
+- Mar 18 - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Decred will have 2 talks and several other activities.
+- Mar 20-21 - [CIBTC Blockchain Summit](http://cibtc.es/) - Motril, Spain. Decred will be gold sponsor. The event is part of a big Decred en Español tour in Spain where @elian will be organising meetups and a workshop with local communities in Madrid, Barcelona, Bilbao, Valencia, Vigo and Motril.
+- May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 
 {announcements in Events domain}
 
