--- a/journal/202001.md
+++ b/journal/202001.md
@@ -231,17 +231,9 @@ Dev activity stats for January: 187 active PRs, 128 master commits, 19K added an
 
 ## People
 
-Welcome to new first time contributors with code merged to master: Ole Andre Birkedal ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=termoose)), Tsunekazu ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=Tsunekazu)), Pablito Labarta ([dcrweb](https://github.com/decred/dcrweb/commits?author=pLabarta))
+Welcome to new first time contributors with code merged to master: Ole Andre Birkedal ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=termoose)), Pablito Labarta ([dcrweb](https://github.com/decred/dcrweb/commits?author=pLabarta))
 
-Congratulations to {n} contributors listed on [decred.org](https://decred.org/contributors/):
-
-- {name, sort names alphabetically} ({nickname}, {title})
-
-{welcome new individual and company contractors listed on decred.org}
-
-{updates from existing contractors}
-
-{interviews about people}
+The following people were removed from the contributors [page](https://decred.org/contributors/): Leslie Ankney, Elizabeth Bagot, Margaret Huang, Milvian Prieto, Denys Zayets, Tim Hebel, Phillip Conrad, Justin Santoro, Bill Xing.
 
 Community stats:
 
