add our network description

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -369,11 +369,7 @@ Upcoming:
   - [Jan 23](https://medium.com/@decreddrive/the-decred-drive-jan-23-b8e9a918bfb3) 
   - [Jan 30](https://medium.com/@decreddrive/the-decred-drive-jan-30-e7b6ebbe213c) 
 
-Decred covered by @Checkmate in Our Network issue 2
-
-  - https://www.reddit.com/r/decred/comments/en76q6/decred_featured_in_ournetwork_issue_2/
-  - https://ournetwork.substack.com/p/our-network-issue-2
-  - https://ournetwork.substack.com/p/our-network-issue-6
+Decred was featured in the new Our Network weekly newsletter issues [2](https://ournetwork.substack.com/p/our-network-issue-2) and [6](https://ournetwork.substack.com/p/our-network-issue-6), with @Checkmate providing charts and insights about Decred on chain data and Richard-Red providing one chart about Politeia. The newsletter includes 5 graphs and comments each week for a number of different blockchain projects. 
 
 Checkmate made the bear case for Ethereum as part of an intended "[crypto rumble](https://bankless.substack.com/p/why-eth-wont-sustain-a-monetary-premium)" in the Bankless newsletter. Someone is supposed to write a rebuttal to his critique but the person who planned to do this has pulled out and a new challenger is being sought. Vitalik Buterin [responded](https://www.reddit.com/r/ethereum/comments/ewb9as/why_eth_wont_sustain_a_monetary_premium/fg2x4oz) to some comments about the write-up on reddit, maybe he will take up the [challenge](https://twitter.com/RyanSAdams/status/1223323007675961344).
 
@@ -384,17 +380,11 @@ Selected articles:
 { idea: how about we put 1-paragraph recaps of research by permabull and ammarooni in a separate Research section? }
 
 - https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd
-
 - https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059
-
 - Is Bitcoin Really Like the Early Internet? by Leigh Cuen ([coindesk.com](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet)) - this reflection piece on the similarities between Bitcoin and the early Internet features interviews with @moo31337 and Zooko Wilcox of Zcash. The article also has some figures related to Decred Treasury spending, as noted in the Governance section.
-
 - 2019 Review: Distributed Governance ([Smith and Crown](https://sci.smithandcrown.com/research/2019-governance-review))  - this comprehensive overview of blockchain governance in 2019 features many accurate observations about Decred, with a special note about Politeia participation rates.
-
-  
-
-- 
-
+- Building a Transparent Future with the Decred Blockchain by @ammarooni ([medium](https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059))
+- Decred On-Chain: HODLer Conversion Rates by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd))
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -403,13 +393,15 @@ Translations:
 
 Videos:
 
-- https://www.youtube.com/watch?v=uzhc2CKI2wk
+- Is a Public Relations Firm in Crypto worth it? Decred Stakeholders Vote and Decide using Politeia by @Exitus ([youtube](https://www.youtube.com/watch?v=uzhc2CKI2wk))
+- 
 
 Audio:
 
-- https://fiftyonepercent.podbean.com/e/decred/
-- https://soundcloud.com/crypto101podcast/ep-302-governing-the-masses-w-decred
-- https://soundcloud.com/decredindepth/ep-16-permabull-nino-block-subsidies-ticket-pool-vwap-hodler-conversion-rates
+- @Akin appeared on Tom Shaugnessy's Fifty One Percent podcast to talk about Governance Reimagined ([podbean](https://fiftyonepercent.podbean.com/e/decred/))
+- Ep. 302 of Crypto 101, Governing the Masses w/ Decred, featured @lukebp ([soundcloud](https://soundcloud.com/crypto101podcast/ep-302-governing-the-masses-w-decred))
+- Decred in Depth Ep. 16 - @PermabullNino discusses the Politeia proposal process and his ongoing work analyzing ticket movements on the Decred chain, introducing concepts like TVWAP and Hodler conversion rates. ([soundcloud](https://soundcloud.com/decredindepth/ep-16-permabull-nino-block-subsidies-ticket-pool-vwap-hodler-conversion-rates))
+- Decred in Depth Ep. 17 - @Ammarooni talks about Toronto's rich #Crypto history, the tokenomics of $DCR, $BTC and $ETH, and considers Decred as an infrastructure provider, productive asset and economic breakthrough. ([libsyn](http://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough))
 
 angfab {gone?}
 
