--- a/journal/202001.md
+++ b/journal/202001.md
@@ -282,13 +282,11 @@ Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred 
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
 
-Hashrate: January's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: January's hashrate opened at ~421 Ph/s and closed ~399 Ph/s, bottoming at 251 Ph/s and peaking at 472 Ph/s throughout the month. Pool hashrate distribution as of Feb 1: Poolin 26.3%, UUPool 18.3%, lab.antpool.com 10.1%, F2Pool 2%,Luxor 1.78%, BTC.com 1.46%, BeePool 0.08%, CoinMine 0.07%, suprnova 0.01%, and others 39.82% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
 {helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
-
-{recap of ticket price action if it was interesting}
+Staking: 30-day average ticket price was 138.25 DCR (+0.75) per dcrstats.com. The price varied between 128.1-150.3 DCR. Locked amount was 5.53-5.69 million DCR, which corresponded to 50.90-51.86% of the available supply.
 
 {helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
