--- a/journal/202001.md
+++ b/journal/202001.md
@@ -284,17 +284,11 @@ Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred 
 
 Hashrate: January's hashrate opened at ~421 Ph/s and closed ~399 Ph/s, bottoming at 251 Ph/s and peaking at 472 Ph/s throughout the month. Pool hashrate distribution as of Feb 1: Poolin 26.3%, UUPool 18.3%, lab.antpool.com 10.1%, F2Pool 2%,Luxor 1.78%, BTC.com 1.46%, BeePool 0.08%, CoinMine 0.07%, suprnova 0.01%, and others 39.82% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
-
 Staking: 30-day average ticket price was 138.25 DCR (+0.75) per dcrstats.com. The price varied between 128.1-150.3 DCR. Locked amount was 5.53-5.69 million DCR, which corresponded to 50.90-51.86% of the available supply.
 
-{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
+Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1577833200000&to=1580511599000) there was an average of 138 public listening nodes and 313 normal nodes per dcr.farm. Version distribution: 51.7 % use dcrd v1.4, 21.7% use dcrd v1.5, 9.4% use dcrd v1.5 dev and RC builds, 3.2% use dcrd v1.6.0 (pre), 2.3% use dcrd v1.5.1, 7.1% use dcrwallet v1.4, 4.2% use dcrwallet v1.5, 0.3% use dcrwallet v1.5.1.
 
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
-
-{any interesting analysis or events in the network}
-
-Data from a node that was running since block 0 [shows]() that Decred mainnet chain had 2517 reorgs of depth 1, 25 reorgs of depth 2, 3 reorgs of depth 3, and 0 reorgs of depth >3.
+Data from a node that was running since block 0 [shows](https://matrix.to/#/!vGasNHFXqjoEWUBTIi:decred.org/$15792934191332SWDSY:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) that Decred mainnet chain had 2517 reorgs of depth 1, 25 reorgs of depth 2, 3 reorgs of depth 3, and 0 reorgs of depth >3.
 
 ## Integrations
 
