--- a/journal/202001.md
+++ b/journal/202001.md
@@ -389,6 +389,8 @@ State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/st
 
 DigixDAO is to be wound down following a [vote](https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury) in which 58 stakeholders voted [overwhelmingly](https://community.digix.global/#/proposals/0xe7d5d8aefc5f73c4c8bbc716f0c3c2dd52d5282d18217db331da4435b8e6966e) (97%) to liquidate its funding pool and reclaim their ETH. DigixDAO was formed to support an ecosystem around the Digix gold token (DGX) and promote it. Digix [conducted](https://www.coindesk.com/digixdao-votes-to-liquidate-64m-treasury) an ICO in 2016 and raised 466,648 ETH, worth $7 million at the time, and currently holds 380,000 ETH (worth $71 million at Jan 2019 prices). After the DAO platform launched in March 2019 to administer the fund the founders began to hear dissatisfaction from DAO members and requests for dissolution. They introduced [Project Ragnarok](https://community.digix.global/#/proposals/0xe7d5d8aefc5f73c4c8bbc716f0c3c2dd52d5282d18217db331da4435b8e6966e) as an option to dissolve the DAO and allow members to reclaim their ETH, and members took that option. Of the DAO token (DGD) circulating supply of 2 million, 1 million was staked to participate in DAO governance. Casual inspection of the proposals on the DigixDAO community [site](https://community.digix.global/#/) suggests turnout in proposal votes was regularly lower than 10% DGD represented, with around 20-30 voters on most proposals. The liquidation proposal had much higher participation, with 66% of circulating DGD voting to shut the whole thing down.
 
+Another ICO project to wind down and return unspent funds this month was [TruStory](https://medium.com/trustory-app/why-trustory-is-shutting-down-6d50175628eb).
+
 Decentraland are putting their Agora governance platform to use again with [two](https://decentraland.org/blog/announcements/back-to-the-polls-two-new-agora-votes/) more votes to determine ecosystem parameters. MANA holders voted on what the marketplace [fee](https://agora.decentraland.org/polls/1d955723-5158-4403-b026-32e974e2fae9) should be (fees are collected in MANA and burned), with 90% voting to increase the fee from 1% to 2.5% (the other options were for larger increases). MANA holders also voted on how much weight to give [LAND](https://agora.decentraland.org/polls/0387cebc-31a3-4e12-a7b4-e9926dd5b392) ownership in governance, having previously voted to indicate that LAND owners should also be able to vote, in this poll the MANA holders voted to give each land the equivalent voting power to 2k MANA (the lowest option available). Participation in these governance polls was around 3.5-4% of circulating MANA supply.
 
 The Zcash development funding saga seems to finally be [over](https://electriccoin.co/blog/dev-fund-poll-shows-consensus/), for this epoch. However not before having to resolve some final disagreements. The first of these was about whether the ECC's funding should be capped in USD terms (limiting ECC's exposure to ZEC upside). The ECC published a [post](https://electriccoin.co/blog/dev-funds-should-be-in-zcash-not-united-states-dollars/) about the importance of ZEC-denominated incentive packages for attracting and retaining talented workers, with a 4 year vesting schedule on these to encourage long service. The post argued against a fiat-denominated cap on ECC's earnings, as it would break this incentive alignment by reducing ECC's exposure to ZEC upside. This was one of the questions put to long-standing forum members in a [poll](https://www.zfnd.org/blog/zip-1014-poll-results/), the [results](https://vote.heliosvoting.org/helios/elections/43b9bec8-39a1-11ea-914c-b6e34ffa859a/view) of which indicated that 56 did not want a cap while 18 did. Voters also opted to limit ECC's share of rewards to 35%, the smallest of the options presented. 
@@ -401,15 +403,19 @@ Round 4 of the Gitcoin Quadratic Funding experiment happened, and this [writeup]
 
 Jiang Zhuoer revealed a [plan](https://medium.com/@jiangzhuoer/infrastructure-funding-plan-for-bitcoin-cash-131fdcd2412e) to fund development of Bitcoin Cash software with 12.5% of the BCH block reward. This would be enforced for all miners by a majority of mining power, and in its initial form would have channelled all funding to a specified company. After pushback from some in the BCH community a revised [version](https://read.cash/@Jiang_Zhuoer_BTC.TOP_CEO/bch-miner-donation-plan-update-a45daad6) of the plan was published. In this new version miners will choose which of a set of pre-approved development projects to donate the 12.5% of their block rewards to. If a miner does not like any of the available options they can choose to burn that portion of their rewards instead of donating. The post also seems to suggest reducing the donation rate from 12.5% to 2-3%, and makes it clear that the details of the plan are still open to discussion. There will be a round of hashrate voting before implementation, and an interim Foundation to receive donations from miners and others, who will have votes in proportion to their donated funds.
 
+After years of delays to Dash Evolution (a suite of usability changes like user names and address books), a version of this now called Dash Platform was [released](https://dashnews.org/long-awaited-dash-evolution-platform-released-on-testnet-with-developer-documentation-hub/) on a public testnet. This is to be the first of many testnet releases ahead of any mainnet release.
+
+After [failing](https://old.reddit.com/r/dashpay/comments/egl6eu/dash_force_news_defunded_by_masternodes/) to secure funding from the Dash Treasury for the first time in 3 years, Dash Force has opted to [disband](https://app.dashnexus.org/proposals/dash-force-q1-2020/overview) their operations after [criticism](https://www.reddit.com/r/dashpay/comments/esaf38/lets_talk_about_dash_force_news/) from the community. 
+
 https://www.monerooutreach.org/stories/RPC-Pay.html
 
-https://medium.com/trustory-app/why-trustory-is-shutting-down-6d50175628eb
 
-https://www.reddit.com/r/dashpay/comments/esaf38/lets_talk_about_dash_force_news/
 
-https://dashnews.org/long-awaited-dash-evolution-platform-released-on-testnet-with-developer-documentation-hub/
 
-https://www.coindesk.com/your-pgp-key-make-sure-its-up-to-date - bitcoin hashing power used to break SHA-1
+
+Bitcoin mining power is being [rented](https://www.coindesk.com/your-pgp-key-make-sure-its-up-to-date) to brute-force forge SHA-1 keys, meaning that it offers virtually no security.
+
+
 
 {DEX}
 
@@ -423,7 +429,7 @@ PlusToken scam {recap of what happend + note poor privacy hygiene} https://crypt
 
 The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community.". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus on improving self-custodial crypto software.
 
-https://dashnews.org/long-awaited-dash-evolution-platform-released-on-testnet-with-developer-documentation-hub/
+
 
 
 
