--- a/journal/202001.md
+++ b/journal/202001.md
@@ -10,9 +10,17 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 - pi activity spike
 - voting progress
 
-## 1.5.1
+## Release v1.5.1
 
-{todo}
+v1.5.1 fixes bugs found in v1.5.0 and adds a few features:
+
+dcrd: fixed minor memory leak with authenticated RPC websocket clients on intermittent connections. This is specially relevant for setups that involve wallets with very large number of addresses.
+
+dcrwallet: fixed address reuse bug that could be triggered by restart of the network sync (e.g. when losing link to dcrd), a bug in ticket buyer that could send change to a wrong account, and a few other bugs. New features are the `auditreuse` command and the ability to use `createrawtransaction` in SPV syncing mode (i.e. without running dcrd).
+
+Decrediton: fixed incorrect display of active tickets, gap exhaustion during change generation, and several UI issues. QR codes have been [sexed up](https://github.com/decred/decrediton/issues/2380) with blue/green Decred logo in the center.
+
+Find the full release notes and downloads on the [release page](https://github.com/decred/decred-binaries/releases/tag/v1.5.1). As always, [verify the binaries](https://docs.decred.org/advanced/verifying-binaries/) before installation.
 
 ## Voting reminder
 
