--- a/journal/202001.md
+++ b/journal/202001.md
@@ -28,51 +28,15 @@ Find the full release notes and downloads on the [release page](https://github.c
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
+[dcrd](https://github.com/decred/dcrd):
 
-[dcrd](https://github.com/decred/dcrd): {}
+Service script for OpenBSD rc.d [added](https://github.com/decred/dcrd/pull/2030) along [existing](https://github.com/decred/dcrd/tree/master/release/services) systemd and SMF configs.
 
-Testing, bug fixes, code cleanup
+HTTP seeder support added [to dcrseeder](https://github.com/decred/dcrseeder/pull/25) and [to dcrd](https://github.com/decred/dcrd/pull/2017).
+
+`chainec` package [removed](https://github.com/decred/dcrd/pull/2039) because of the practical issues encountered with this generic crypto API.
 
 Nonce generation [improved and optimized](https://github.com/decred/dcrd/pull/2044) by specializing the implementation specifically for secp256k1 and modifying it in such a way that signing can no longer fail in the extremely unlikely event a returned nonce results in an invalid signature.
-
-Merged:
-
-- multi: Update to prerel module release versions.: https://github.com/decred/dcrd/pull/2032
-
-- connmgr: Allow pending outbound conn removal.: https://github.com/decred/dcrd/pull/2033
-
-- multi: switch to syndtr/goleveldb : https://github.com/decred/dcrd/pull/2034
-
-- [Preparation]() for breaking public API changes to the [secp256k](https://github.com/decred/dcrd/pull/2040) and [chaincfg](https://github.com/decred/dcrd/pull/2038) modules. 
-
-- chaincfg: Start v3 module dev cycle.: https://github.com/decred/dcrd/pull/2038
-
-- chaincfg: Remove chainec package. : https://github.com/decred/dcrd/pull/2039
-
-- release: Remove build metadata from master branch. : https://github.com/decred/dcrd/pull/2053 
-
-- [release-v1.5] release: Bump for 1.5.1. : https://github.com/decred/dcrd/pull/2052
-
-- [release-v1.5] dcrctl: Update dcrwallet RPC types package : https://github.com/decred/dcrd/pull/2051
-
-- [release-v1.5] rpcwebsocket: Use nonblocking messages and ntfns. : https://github.com/decred/dcrd/pull/2050
-
-- [release-v1.5] rpcwebsocket: Remove client from missed maps : https://github.com/decred/dcrd/pull/2049
-
-- secp256k1: Cleanup signature tests. : https://github.com/decred/dcrd/pull/2048
-
-- secp256k1: Correct comments in signature.go. : https://github.com/decred/dcrd/pull/2046
-
-- schnorr: Remove unused threshold code. : https://github.com/decred/dcrd/pull/2045
-
-- secp256k1: Remove unused chainec code. : https://github.com/decred/dcrd/pull/2042
-
-- mining: Fix regenHandler shutdown. : https://github.com/decred/dcrd/pull/2041
-
-- secp256k1: Improve and optimize nonce generation. : https://github.com/decred/dcrd/pull/2044
-
-- secp256k1: Start v3 module dev cycle. : https://github.com/decred/dcrd/pull/2040
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
