--- a/journal/202001.md
+++ b/journal/202001.md
@@ -213,13 +213,7 @@ There were 6 proposals submitted in Jan, 5 have already been voted on and 1 is s
 * A proposal for [stickers](https://proposals.decred.org/proposals/4acb95564d36488a7ee64683a84dd7954982b2f4743e2f7a15477231f863442f) was rejected with 5% yes votes and participation of 21%.
 * A [proposal](https://proposals.decred.org/proposals/95cfb73254a032b2c199c37bb499d6f172d044b1f38016279c5bbca6572251f0) by @exitus to produce video content for Decred is under discussion.
 
-
-
-{check if permabull and ammarooni posted their final pieces - if so, it means they finished delivering and is worth noting here}
-
-
-
-Politeia Digest [Issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. 
+Politeia Digest [Issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. Auditing tools have been developed which process i2's order open/close history to calculate uptime on a percentage basis. If uptime is less than the 90% quoted in i2's proposal, their fees for the month will be reduced proportionally.
 
 Also in Jan, @jy-p prepared some numbers about the geographical reach of Decred Treasury spending which were featured in an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) on Coindesk: 
 
@@ -320,12 +314,11 @@ Selected articles:
 
 { idea: how about we put 1-paragraph recaps of research by permabull and ammarooni in a separate Research section? }
 
-- https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd
-- https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059
 - Is Bitcoin Really Like the Early Internet? by Leigh Cuen ([coindesk.com](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet)) - this reflection piece on the similarities between Bitcoin and the early Internet features interviews with @moo31337 and Zooko Wilcox of Zcash. The article also has some figures related to Decred Treasury spending, as noted in the Governance section.
 - 2019 Review: Distributed Governance ([Smith and Crown](https://sci.smithandcrown.com/research/2019-governance-review))  - this comprehensive overview of blockchain governance in 2019 features many accurate observations about Decred, with a special note about Politeia participation rates.
 - Building a Transparent Future with the Decred Blockchain by @ammarooni ([medium](https://medium.com/decred/building-a-transparent-future-with-the-decred-blockchain-e77471d28059))
 - Decred On-Chain: HODLer Conversion Rates by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-hodler-conversion-rates-87e16a4c78cd))
+- The future of digital currencies in Africa? Meet Decred the autonomous digital currency ([appsafrica](https://www.appsafrica.com/the-future-of-digital-currencies-in-africa-meet-decred-the-autonomous-digital-currency/))
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
 Translations:
@@ -335,7 +328,8 @@ Translations:
 Videos:
 
 - Is a Public Relations Firm in Crypto worth it? Decred Stakeholders Vote and Decide using Politeia by @Exitus ([youtube](https://www.youtube.com/watch?v=uzhc2CKI2wk))
-- 
+- Decred’s Akin Sawyerr Says Blockchain Is Part of Africa’s Political Future ([coindesk](https://www.coindesk.com/decreds-akin-sawyerr-says-blockchain-is-part-of-africas-political-future))
+- The Libra Effect at CES2020: Highlights of @akin by @Exitus ([youtube](https://www.youtube.com/watch?v=5Zi5wYZhEDE))
 
 Audio:
 
@@ -359,8 +353,10 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
-- https://www.reddit.com/r/ethereum/comments/ewb9as/why_eth_wont_sustain_a_monetary_premium/fg1q9q7/
+- [Update](https://www.reddit.com/r/decred/comments/eo3tje/decred_dex_progress_the_client_and_server_are/) on dcrdex, atomic testnet trading up next.
+- [How](https://www.reddit.com/r/decred/comments/ervlvw/how_to_runstartmove_decrd_to_the_background_i_can/) to move dcrd to the background - common question for new CLI users.
+- Is Decred [dead](https://www.reddit.com/r/decred/comments/ekhi2l/is_decred_dead_hash_rate_has_stagnated_and/)? Nope.
+- Interesting discussion on @Checkmate's Ethereum bear case [post](https://www.reddit.com/r/ethereum/comments/ewb9as/why_eth_wont_sustain_a_monetary_premium/fg1q9q7/) on /r/ethereum, including some discussion with Vitalik Buterin.
 
 Selected Twitter discussions:
 
@@ -368,8 +364,19 @@ Selected Twitter discussions:
 - adaptability example https://twitter.com/BarnardTheBear/status/1213893268351672320
 - Decred is boring https://twitter.com/marco_peereboom/status/1218178834786324480
 - How often does your CEO or project lead tell you to engineer him out of the project? https://twitter.com/marco_peereboom/status/1212849047456927744
-- 
-- 
+- @DCRComic Atomic Swaps [comic](https://twitter.com/DCRComic/status/1222874521507717121).
+- @DCRComic [take](https://twitter.com/DCRComic/status/1220367582479425537?s=20) on the BCH development funding story.
+- @DCRComic [thread](https://twitter.com/DCRComic/status/1218189767759859713?s=20) about dcrdata.
+- An [update](https://twitter.com/chappjc/status/1222004371199864834) on dcrdex from @chappjc, "this Spring".
+- AGNFAB1 DCR is WATER BTC is [FiRE](https://twitter.com/AGNFAB1/status/1220091425737580544).
+- @richardred [opened](https://twitter.com/RichardRed0x/status/1219381114768429057) the pod bay doors to vote for the open source research program.
+- Jesse Walden of a16z [tweeted](https://twitter.com/jessewldn/status/1214304297468538881) a positive message about cryptocommons.cc, also mentioning Decred. {not sure about this one}
+- @lukebp [tweets](https://twitter.com/lukebp_/status/1217871970420711424) about the benefits of being able to amend consensus rules to enhance network security and UX.
+- @decredproject [tweet](https://twitter.com/decredproject/status/1217509346667585536) about the new getting started page on dcrdocs sought to get people #Decreducated.
+- The Ditto and Monde PR proposals drew some attention from journalists in the space, including the Block's [Frank Chaparro](https://twitter.com/fintechfrank/status/1215704016564428802).
+- @Dustorf [on](https://twitter.com/lefebvre_dustin/status/1220397690602901504?s=20) the digital Decred contractor collective.
+- @Degeri points out that the websites of most top blockchain projects are [feeding](https://twitter.com/degeri_crypto/status/1217372695483965441?s=20) information to Google.
+- [#DrawStakey](https://twitter.com/DCRComic/status/1220732376088809477)
 
 ## Markets
 
@@ -383,7 +390,7 @@ In January DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average da
 
 {PoW, ASIC resistance, full nodes, cc network security and other cc tech}
 
-December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahash per second). 70% of the ~40 Eh/s added is speculated to come from China, while China's share in the total hashrate is estimated to be 65%. The estimated "breakeven" and "miner capitulation" prices are estimated ~$6,100 and ~$3,900 respectively. Check the  [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
+December's mining report from CoinShares notes a 80% Bitcoin hashrate increase since Jun 2019, from ~50 to ~90 Eh/s (Exahash per second). 70% of the ~40 Eh/s added is speculated to come from China, while China's share in the total hashrate is estimated to be 65%. The estimated "breakeven" and "miner capitulation" prices are estimated ~$6,100 and ~$3,900 respectively. Check the [highlights](https://medium.com/coinshares/bitcoins-hash-rate-grew-more-than-80-since-june-mostly-within-china-7444b20b2c89) and the full linked report for more interesting numbers.
 
 State of the Network 2019 [Year in Review](https://coinmetrics.substack.com/p/state-of-the-network-2019-year-in) by Coin Metrics compared the performance of the largest 18 cryptoassets (including DCR) across a set of market and chain metrics.
 
@@ -413,7 +420,7 @@ Bitcoin mining power is being [rented](https://www.coindesk.com/your-pgp-key-mak
 
 A European Central Bank [working paper](https://www.ecb.europa.eu/pub/pdf/scpwps/ecb.wp2351~c8c18bbd60.en.pdf?9bd63a4ddea2300dca05f2ccaa08c0e0) has indicated that the ECB would need to control the volume being used of any Central Bank Digital Currency (CBDC). One [analysis](https://cointelegraph.com/news/europe-central-bank-proposes-unattractive-rates-for-digital-currency) of the paper suggested that unattractive rates would be set for large holdings to discourage heavy use of the digital currency. One concern about heavy use of a CBDC would be that holders could move their funds outside the ECB's jurisdiction more easily in times of crisis.
 
-https://www.monerooutreach.org/stories/RPC-Pay.html
+https://www.monerooutreach.org/stories/RPC-Pay.html {worth covering?}
 
 
 
@@ -425,11 +432,11 @@ https://www.monerooutreach.org/stories/RPC-Pay.html
 
 {other: regulations, security, fun}
 
-PlusToken scam {recap of what happend + note poor privacy hygiene} https://cryptobriefing.com/bitcoin-analysis-reveals-plustoken-scam/
+Perpetrators of the PlusToken scam are [still](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) churning and selling the ill-gotten 180,000 BTC from their ponzi scheme. Although 6 people have been arrested in connection with PlusToken, the funds are still moving and being sold through OTC trades on Huobi [apparently](https://blog.chainalysis.com/reports/plustoken-scam-bitcoin-price) - possibly affecting the BTC price. The scammers' tokens are being tracked despite their use of mixing and 24,000 transactions involving 71,000 addresses to try and make this difficult - because they re-used an address. While an estimated $185 million worth of the BTC has been sold, 790k ETH of a total 800k remains untouched.
 
 The custodial bitcoin wallet provider Bottle Pay [shut down](https://www.coindesk.com/bitcoin-app-bottle-pay-shuts-down-over-impending-eu-money-laundering-laws) in December, citing the AMLD5 EU regulation coming into effect Jan 10, 2020. From the [announcement](https://bottlepay.helpscoutdocs.com/article/40-official-announcement-on-the-shutdown-of-bottle-pay): "The amount and type of extra personal information we would be required to collect from our users would alter the current user experience so radically, and so negatively, that we are not willing to force this onto our community.". Standing by the principles and shutting down is the opposite of doing [whatever it takes](https://thenextweb.com/hardfork/2018/09/05/shapeshift-cryptocurrency-exchange-kyc/) to keep the business afloat. The case can serve as a yet another signal to focus on improving self-custodial crypto software.
 
-
+$500 billion being pumped into the overnight money (repo) market by the Fed has drawn the attention of Colin Harper of Bitcoin Magazine, in a good [article](https://bitcoinmagazine.com/articles/the-fed-has-pumped-500-billion-into-the-repo-market-where-does-it-end) that introduces the subject and asks what is going on.
 
 
 
