--- a/journal/202001.md
+++ b/journal/202001.md
@@ -374,11 +374,9 @@ Selected Twitter discussions:
 
 ## Markets
 
-In January DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In January DCR was trading between USD 16.24-22.44 / BTC 0.00195-0.00257. The average daily rate was $18.00.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
-
-{briefly cover altcoin action, https://cointelegraph.com/news/dash-price-up-70-bsv-gains-200-is-a-price-correction-imminent or better}
+The price movement of Bitcoin from ~6500 to the ~9000 range spurred the price increase of a number of [altcoins](https://cointelegraph.com/news/dash-price-up-70-bsv-gains-200-is-a-price-correction-imminent) including Dash, Zcash and a number of Bitcoin forks. 
 
 ## Relevant External
 
