--- a/journal/202001.md
+++ b/journal/202001.md
@@ -42,23 +42,11 @@ Nonce generation [improved and optimized](https://github.com/decred/dcrd/pull/20
 
 Multiple bug fixes for the v1.5.1 release.
 
-[Decrediton](https://github.com/decred/decrediton): {}
+[Decrediton](https://github.com/decred/decrediton):
 
-Minor bug fixes, UI enhancements, 
+Lots of bug fixes and UI enhancements for the v1.5.1 release.
 
-Stylized Decred logo [placed](https://github.com/decred/decrediton/pull/2385) in QR code, startup code [refactored](https://github.com/decred/decrediton/pull/2392).
-
-- [Refactor Startup] fix wallet creation and restoring: https://github.com/decred/decrediton/pull/2392
-
-- [home] Fix active ticket count in SPV wallets : https://github.com/decred/decrediton/pull/2389
-
-- Disable element selection : https://github.com/decred/decrediton/pull/2388
-
-- dcrlnd: remove namespacing from launch opts: https://github.com/decred/decrediton/pull/2387
-
-- Put stylized Decred logo in the middle of the QR code: https://github.com/decred/decrediton/pull/2385
-
-- Fix margin on governance tab : https://github.com/decred/decrediton/pull/2384
+Work continues to [refactor startup](https://github.com/decred/decrediton/issues/2121) to utilize a hierarchical state machine.
 
 [Politeia](https://github.com/decred/politeia): {}
 
