--- a/journal/202001.md
+++ b/journal/202001.md
@@ -48,7 +48,15 @@ Lots of bug fixes and UI enhancements for the v1.5.1 release.
 
 Work continues to [refactor startup](https://github.com/decred/decrediton/issues/2121) to utilize a hierarchical state machine.
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+The Decred Contractor Clearance (DCC) component of the CMS has been launched and served a couple of first DCC issuances.
+
+CMS received a bunch of fixes and UI enhancements.
+
+Work continues on CMS UI [redesign](https://github.com/decred/politeiagui/pull/1625) and adding dark mode to Politeia.
+
+{ optionally add an intro about pi-ui: what is it, why, where does it stand }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
