Dev dcrstakepool..cspp

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -58,54 +58,29 @@ Work continues on CMS UI [redesign](https://github.com/decred/politeiagui/pull/1
 
 { optionally add an intro about pi-ui: what is it, why, where does it stand }
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool):
 
-Code cleanup, UI enhancements, bug fixes
+dcrstakepool v1.5.0 was released. This release contains all development work completed since v1.2.0 (September 2019). Since then, 7 contributors have produced and merged 37 pull requests. Changes include minor GUI enhancements, improved HTTP request logging, some streamlining of existing code, and various bug fixes. For the full list of changes and upgrade path see the [release notes](https://github.com/decred/dcrstakepool/blob/master/docs/release-note-1.5.0.md).
 
-dcrstakepool v1.5.0 was released. This release contains all development work completed since v1.2.0 (September 2019). Since then, 7 contributors have produced and merged 37 pull requests. Changes include minor GUI enhancements, improved HTTP request logging, some streamlining of existing code, and various bug-fixes. For the full list of changes see the [release notes](https://github.com/jholdstock/dcrstakepool/blob/524a3da4b07da713bf7e5df1818aead15e55b7aa/docs/release-note-1.5.0.md).
+A new high level design was [proposed](https://github.com/decred/dcrstakepool/issues/574) for removing VSP accounts that also removes fees from VSP ticket transactions, making it possible for both solo and VSP stakers to purchase mixed tickets in the same anonymity set. (_missed in Dec_)
 
-dcrstakepool 1.5.0 requires dcrd/dcrwallet 1.5.0 or later.
+[dcrpool](https://github.com/decred/dcrpool):
 
-Merged: 
+Large [refactoring](https://github.com/decred/dcrpool/pull/143) to decouple components and facilitate testing.
 
-- Bump to 1.6-pre version. Remove conf deprecated in 1.5: https://github.com/decred/dcrstakepool/pull/590
+[dcrlnd](https://github.com/decred/dcrlnd):
 
-- application: remove Close method : https://github.com/decred/dcrstakepool/pull/588
+Docker examples [finished](https://github.com/decred/dcrlnd/pull/66) that automate the deployment of simnet environments with docker-compose.
 
-- https://github.com/decred/dcrstakepool/pull/584 : Update Profit => Reward
+Beginner guide for testing Decred LN [published](https://medium.com/decred/beginner-guide-to-the-decred-dcr-lightning-network-917f8ad304aa) on Medium.
 
-- https://github.com/jholdstock/dcrstakepool/blob/524a3da4b07da713bf7e5df1818aead15e55b7aa/docs/release-note-1.5.0.md
+Bug fixes, documentation improvements.
 
-- Always show vote options on /voting: https://github.com/decred/dcrstakepool/pull/583
+Work continues to [port upstream changes](https://github.com/decred/dcrlnd/pull/74) up to the recently released [v0.9.0-beta](https://github.com/lightningnetwork/lnd/releases/tag/v0.9.0-beta) version. The ported changeset includes 503 commits that add 37K and remove 11K lines of code.
 
-- Note version requirement for limit_req delay param: https://github.com/decred/dcrstakepool/pull/580
+[cspp](https://github.com/decred/cspp):
 
-- https://github.com/decred/dcrstakepool/issues/574 (_missed in Dec_)
-
-[dcrpool](https://github.com/decred/dcrpool): {}
-
-[dcrlnd](https://github.com/decred/dcrlnd): {}
-
-Bug fixes, documentation.
-
-Work continues to [port upstream changes](https://github.com/decred/dcrlnd/pull/74) up to the recently tagged v0.9.0-beta-rc1 version. 
-
-Beginner guide [published](https://medium.com/decred/beginner-guide-to-the-decred-dcr-lightning-network-917f8ad304aa) on Medium. 
-
-- Network command line switches for `dcrlnd` and `dcrlncli` which closes #70 #71: https://github.com/decred/dcrlnd/pull/72
-
-- Bring bugfix to v0.2.1: https://github.com/decred/dcrlnd/pull/79
-
-- Fixed documentation to reflect `-n` removed from command line args: https://github.com/decred/dcrlnd/pull/78
-
-- dcrwallet: Fix syncer not reconnecting: https://github.com/decred/dcrlnd/pull/75
-
-Draft:
-
-- simnet: compose file: https://github.com/decred/lightning-faucet/pull/28
-
-
-[cspp](https://github.com/decred/cspp): {}
+Bug fixes and code maintenance. A copy of Go's internal chacha20 package was removed in favor of the recently released public API.
 
 [dcrdex](https://github.com/decred/dcrdex): {}
 
