Dev dcrdocs, decred.org

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -127,27 +127,11 @@ Small fixes and UI improvements.
 
 [docs](https://github.com/decred/dcrdocs):
 
-Dcrlnd (LN) commands and arguments [documented](https://github.com/decred/dcrdocs/pull/1055) for CLI. Setup instructions for Trezor on Decrediton [added](https://github.com/decred/dcrdocs/pull/1062). Reading list [added](https://github.com/decred/dcrdocs/pull/1043) to Getting Started section containing curated selection of articles, podcasts, video and other materials. Two new definitions (Coin Type and HD Wallet ) [added](https://github.com/decred/dcrdocs/pull/1057) to Glossary. 
+[dcrlnd](https://docs.decred.org/wallets/lightning/) commands and arguments [documented](https://github.com/decred/dcrdocs/pull/1055) for CLI. Setup instructions for [Trezor](https://docs.decred.org/wallets/decrediton/trezor/) on Decrediton [added](https://github.com/decred/dcrdocs/pull/1062). [Reading list](https://docs.decred.org/getting-started/reading-list/) [added](https://github.com/decred/dcrdocs/pull/1043) to Getting Started section containing curated selection of articles, podcasts, video and other materials. [BLAKE-256](https://docs.decred.org/research/blake-256-hash-function/) page significantly [extended](https://github.com/decred/dcrdocs/pull/1034) to explain why that function was chosen. Two new definitions (Coin Type and HD Wallet) [added](https://github.com/decred/dcrdocs/pull/1057) to [Glossary](https://docs.decred.org/glossary/).
 
-Merged:
+[decred.org](https://github.com/decred/dcrweb):
 
-- Refresh "How to Vote" page: https://github.com/decred/dcrdocs/pull/1053
-
-- Update PoW intro. Mention fees.: https://github.com/decred/dcrdocs/pull/1049
-
-- Rewording "How to Stake": https://github.com/decred/dcrdocs/pull/1039
-
-- reading list https://twitter.com/decredproject/status/1217509346667585536 {based on Ditto's edu repo?}
-
-[decred.org](https://github.com/decred/dcrweb): {}
-
-Minor version bumps, cleanup. 
-
-TumbleBit paper now [hosted](Host TumbleBit paper.) on decred.org. 
-
-Other:
-
-- {smaller items go here}
+Updated [contributors](https://github.com/decred/dcrweb/pull/774), cleanup.
 
 Dev activity stats for January: 187 active PRs, 128 master commits, 19K added and 10K deleted lines spread across 15 repositories. Contributions came from 3-6 developers per repository.
 
